# inferlog

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
db/: schema.sql
docs/: architecture.md
examples/: README.md  custom_http_provider.py  in_process_provider.py
gateway/: Dockerfile  requirements.txt
gateway/app/: chat.py  config.py  conversations.py  db.py  deps.py  llm.py  main.py  models.py
gateway/tests/: conftest.py  test_chat.py  test_conversations.py
ingestion/: Dockerfile  requirements.txt
ingestion/app/: api.py  config.py  db.py  enrich.py  events.py  processing.py  redaction.py  stream.py  worker.py
ingestion/tests/: conftest.py  test_api.py  test_enrich.py  test_processing.py  test_redaction.py  test_worker.py
scripts/: seed.py
sdk/: README.md  pyproject.toml
sdk/inferlog/: __init__.py  auto.py  client.py  context.py  dispatcher.py  events.py  parsers.py  redaction.py  runtime.py  sampling.py
sdk/inferlog/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
sdk/tests/: conftest.py  test_auto_instrumentation.py  test_client.py  test_dispatcher.py  test_event_size_caps.py  test_http_capture_providers.py  test_production_hardening.py  test_providers.py  test_sdk_redaction.py  test_transport_mode.py  test_wrap_provider.py
web/: Dockerfile  default.conf.template  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/components/: ChatView.tsx  ConversationList.tsx  DashboardView.tsx
