[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inferlog"
version = "0.1.0"
description = "Lightweight inference-logging wrapper around LLM provider calls"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
# Provider SDKs are optional so the core stays tiny. Install the ones you use.
openai = ["openai>=1.40,<2.0"]
anthropic = ["anthropic>=0.39,<1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["inferlog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
