[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inferlog"
version = "0.3.0"
description = "Model-agnostic inference logging — one-line init, HTTP-level capture, PII-redacted previews"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
# Convenience installs of the vendor SDKs. The SDK itself never imports
# them — capture is HTTP-level — but apps that use these libs will need
# them in their environment.
openai = ["openai>=1.40,<2.0"]
anthropic = ["anthropic>=0.39,<1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["inferlog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
