[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inferlog"
version = "0.4.0"
description = "Model-agnostic inference logging — one-line init, HTTP-level capture, PII-redacted previews"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
# The SDK has no runtime dependency on any vendor LLM library — capture is
# at the httpx layer. Apps install whichever provider SDKs they actually
# use themselves; there's no need to pull them in through `inferlog[...]`.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["inferlog*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
